--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 /index.html
 <!DOCTYPE html>
 <html lang="ja">
-
-
+<head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -12,10 +11,12 @@
       background: #f0f8ff url('https://iccarcgis.maps.arcgis.com/sharing/rest/content/items/eb1fe275b5e84701b7f804c8d8a0704b/data') no-repeat center center fixed;
       background-size: cover;
     }
+
     h1 {
       text-align: center;
       margin-bottom: 10px;
     }
+
     #age-buttons {
       display: flex;
       flex-wrap: wrap;
@@ -24,6 +25,7 @@
       max-width: 400px;
       margin: 0 auto 20px auto;
     }
+
     #age-buttons button {
       padding: 12px;
       font-size: 16px;
@@ -35,18 +37,21 @@
       flex: 1 1 30%;
       min-width: 100px;
     }
+
     #age-buttons button:hover {
       background-color: #d0eaff;
     }
+
     #tanzaku-list {
       max-width: 400px;
       margin: 0 auto;
       list-style: none;
       padding: 0;
     }
+
     #tanzaku-list li {
-      background: #fff9e6; /* 薄いクリーム色 */
-      border: 4px double #2e7d32; /* 緑の二重線 */
+      background: #fff9e6;
+      border: 4px double #2e7d32;
       border-radius: 8px;
       padding: 12px 16px;
       margin-bottom: 10px;
@@ -58,6 +63,7 @@
       white-space: pre-wrap;
       color: #333;
     }
+
     #tanzaku-list li .penname {
       font-size: 14px;
       color: #2e7d32;
@@ -65,6 +71,7 @@
       text-align: right;
       font-weight: bold;
     }
+
     #tanzaku-list li.expanded {
       background-color: #e0f0ff;
     }
@@ -89,10 +96,11 @@
 <script>
   const list = document.getElementById("tanzaku-list");
   const ageField = "field_4";
-  let currentWhere = "1=1";
+  const confirmField = "確認";
+  let currentWhere = `${confirmField}='済'`; // 初期表示は「済」だけ
 
   function fetchAndDisplay() {
-    const url = `https://services5.arcgis.com/oISMFKlA90RsGqBJ/arcgis/rest/services/survey123_428ee531d6f64629ad1fb10db7e23778_results/FeatureServer/0/query?where=${encodeURIComponent(currentWhere)}&outFields=field_1,field_2,${ageField}&orderByFields=objectid desc&resultRecordCount=100&f=json`;
+    const url = `https://services5.arcgis.com/oISMFKlA90RsGqBJ/arcgis/rest/services/survey123_428ee531d6f64629ad1fb10db7e23778_results/FeatureServer/0/query?where=${encodeURIComponent(currentWhere)}&outFields=field_1,field_2,${ageField},${confirmField}&orderByFields=objectid desc&resultRecordCount=100&f=json`;
 
     fetch(url)
       .then(res => res.json())
@@ -129,7 +137,11 @@
   }
 
   function filterByAge(ageGroup) {
-    currentWhere = ageGroup ? `field_4='${ageGroup}'` : "1=1";
+    if (ageGroup) {
+      currentWhere = `${confirmField}='済' AND ${ageField}='${ageGroup}'`;
+    } else {
+      currentWhere = `${confirmField}='済'`;
+    }
     fetchAndDisplay();
   }
 
