--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>短冊ビューア（スマホ対応・画像付き）</title>
+  <title>短冊ビューア（スマホ対応）</title>
   <style>
     body {
       margin: 0;
@@ -48,7 +48,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 15px;
     }
 
     @keyframes sway {
@@ -58,7 +58,7 @@
     }
 
     .tanzaku {
-      width: 100px;
+      width: 80px;
       position: relative;
       animation: sway 3s infinite ease-in-out;
       transform-origin: top center;
@@ -70,23 +70,23 @@
       display: block;
     }
 
-.text {
-  position: absolute;
-  top: 12%;
-  left: 50%;
-  transform: translateX(-50%);
-  height: 76%;
-  max-height: 80%;
-  width: auto;
-  padding: 2px;
-  color: black;
-  font-size: 12px;
-  writing-mode: vertical-rl;
-  text-align: center;
-  overflow: hidden;
-  word-break: break-word;
-  line-height: 1.2;
-}
+    .text {
+      position: absolute;
+      top: 12%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 76%;
+      width: 100%;
+      padding: 0 2px;
+      color: black;
+      font-size: 11px;
+      writing-mode: vertical-rl;
+      text-align: center;
+      overflow: hidden;
+      word-break: break-word;
+      line-height: 1.1;
+      background-color: transparent;
+    }
 
     #popup {
       display: none;
@@ -103,27 +103,39 @@
 
     #popup-content {
       background-color: white;
-      padding: 20px;
+      padding: 10px;
       border-radius: 10px;
       max-width: 90%;
       text-align: center;
-      font-size: 18px;
-      font-weight: bold;
-      line-height: 1.6;
     }
 
-    @media (max-width: 600px) {
-      .tanzaku {
-        width: 80px;
-      }
+    .popup-inner {
+      position: relative;
+      width: 80vw;
+      max-width: 300px;
+    }
 
-      .text {
-        font-size: 11px;
-      }
+    .popup-inner img {
+      width: 100%;
+      display: block;
+    }
 
-      #age-buttons button {
-        font-size: 12px;
-      }
+    .popup-text {
+      position: absolute;
+      top: 14%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 72%;
+      padding: 4px;
+      font-size: 16px;
+      font-weight: bold;
+      color: black;
+      writing-mode: vertical-rl;
+      text-align: center;
+      word-break: break-word;
+      overflow: hidden;
+      background-color: transparent;
+      line-height: 1.3;
     }
   </style>
 </head>
@@ -192,37 +204,16 @@ function displayTanzaku(features) {
 
     div.innerHTML = `
       <img src="${imgURL}" alt="短冊">
-      <div class="text">${wish}<br><br>★${penname}</div>`;
+      <div class="text">${wish}★${penname}</div>`;
 
     div.onclick = () => {
-  popupContent.innerHTML = `
-    <div style="position: relative; width: 100%; max-width: 400px;">
-      <img src="${imgURL}" alt="短冊" style="width: 100%; display: block;">
-      <div style="
-        position: absolute;
-        top: 15%;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 70%;
-        max-height: 80%;
-        width: auto;
-        padding: 5px;
-        color: black;
-        font-size: 20px;
-        font-weight: bold;
-        writing-mode: vertical-rl;
-        text-align: center;
-        overflow: hidden;
-        word-break: break-word;
-        line-height: 1.5;
-        background-color: transparent;
-      ">
-        ${wish}<br><br>★${penname}
-      </div>
-    </div>`;
-  popup.style.display = "flex";
-};
-
+      popupContent.innerHTML = `
+        <div class="popup-inner">
+          <img src="${imgURL}" alt="短冊">
+          <div class="popup-text">${wish}★${penname}</div>
+        </div>`;
+      popup.style.display = "flex";
+    };
 
     container.appendChild(div);
   });
@@ -233,4 +224,5 @@ fetchAndDisplay();
 
 </body>
 </html>
+
 
