--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ function displayTanzaku(features) {
       popupContent.innerHTML = `
         <div class="popup-inner">
           <img src="${imgURL}" alt="短冊">
-          <div class="popup-text">${wish}★${penname}</div>
+          <div class="popup-text">${wish}<br><br>★${penname}</div>
         </div>`;
       popup.style.display = "flex";
     };
