--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ function displayTanzaku(features) {
 
     div.innerHTML = `
       <img src="${imgURL}" alt="短冊">
-      <div class="text">${wish}<br>★${penname}</div>`;
+      <div class="text">${wish}<br><br>★${penname}</div>`;
 
     div.onclick = () => {
       popupContent.innerHTML = `
