--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
       width: 100%;
       display: block;
     }
-      .text {
-  position: absolute;
-  top: 15.5%;
-  left: 53%;
-  transform: translateX(-50%);
-  height: 76%;
-  width: auto;
-  max-width: 100%;
-  padding: 0 4px;
-  color: black;
-  font-size: 9px;
-  writing-mode: vertical-rl;
-  text-align: center;
-  overflow: hidden;
-  word-break: break-word;
-  line-height: 1.2;
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
+    .text {
+      position: absolute;
+      top: 13.5%;
+      left: 52%;
+      transform: translateX(-50%);
+      height: 76%;
+      width: auto;
+      max-width: 100%;
+      padding: 0 4px;
+      color: black;
+      font-size: 11px;
+      writing-mode: vertical-rl;
+      text-align: center;
+      overflow: hidden;
+      word-break: break-word;
+      line-height: 1.2;
+      background-color: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
     #popup {
       display: none;
@@ -126,8 +126,8 @@
 
     .popup-text {
       position: absolute;
-      top: 16%;
-      left: 55%;
+      top: 14%;
+      left: 50%;
       transform: translateX(-50%);
       height: 72%;
       padding: 4px;
@@ -140,6 +140,9 @@
       overflow: hidden;
       background-color: transparent;
       line-height: 1.3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   </style>
 </head>
@@ -208,13 +211,22 @@ function displayTanzaku(features) {
 
     div.innerHTML = `
       <img src="${imgURL}" alt="短冊">
-      <div class="text">${wish}<br><br>★${penname}</div>`;
+      <div class="text">${wish}★${penname}</div>`;
 
+    // ⬇ フォントサイズを自動縮小（6pxまで）
+    const textEl = div.querySelector(".text");
+    let fontSize = 11;
+    while (textEl.scrollHeight > textEl.clientHeight && fontSize > 6) {
+      fontSize -= 0.5;
+      textEl.style.fontSize = fontSize + "px";
+    }
+
+    // ⬇ ポップアップ表示処理
     div.onclick = () => {
       popupContent.innerHTML = `
         <div class="popup-inner">
           <img src="${imgURL}" alt="短冊">
-          <div class="popup-text">${wish}<br><br>★${penname}</div>
+          <div class="popup-text">${wish}<br>★${penname}</div>
         </div>`;
       popup.style.display = "flex";
     };
@@ -228,5 +240,6 @@ fetchAndDisplay();
 
 </body>
 </html>
+
 
 
