--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div id="tanzaku-container"></div>
 
 <div id="popup" onclick="popup.style.display='none'">
-  <div id="popup-content" onclick="event.stopPropagation();"></div>
+  <div id="popup-content"></div>
 </div>
 
 <script>
