--- a/index.html
+++ b/index.html
@@ -2,53 +2,28 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>短冊ビューア（スマホ対応）</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>短冊ビューア アプリ版</title>
   <style>
     body {
       margin: 0;
       padding: 0;
+      background: #f0f8ff;
       font-family: sans-serif;
       background-image: url('https://iccarcgis.maps.arcgis.com/sharing/rest/content/items/eb1fe275b5e84701b7f804c8d8a0704b/data');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-    }
-
-    #age-buttons {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 10px 5px;
-      gap: 5px;
-    }
-
-    #age-buttons button {
-      font-size: 14px;
-      padding: 6px 10px;
-      border-radius: 5px;
-      border: 1px solid #888;
-      background-color: #fff;
-      cursor: pointer;
-    }
-
-    #age-buttons button:hover {
-      background-color: #ffddee;
+      overflow-x: hidden;
     }
 
     #tanzaku-container {
-      margin-top: 80px;
-      padding: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
+      position: relative;
+      width: 100%;
+      min-height: 100vh;
+      overflow-y: auto;
+      padding-bottom: 180px;
     }
 
     @keyframes sway {
@@ -58,38 +33,35 @@
     }
 
     .tanzaku {
-      width: 96px;
-      position: relative;
+      position: absolute;
+      width: 100px;
+      text-align: center;
+      cursor: pointer;
       animation: sway 3s infinite ease-in-out;
       transform-origin: top center;
-      cursor: pointer;
     }
 
     .tanzaku img {
       width: 100%;
-      display: block;
     }
 
     .text {
       position: absolute;
-      top: 17%;
-      left: 52%;
-      transform: translateX(-50%);
-      height: 76%;
-      width: auto;
-      max-width: 100%;
-      padding: 0 4px;
+      top: 20%;
+      left: 20%;
+      transform: translate(-50%, 0%);
+      width: 80%;
+      max-height: 70%;
+      padding: 2px;
       color: black;
-      font-size: 8px;
+      font-size: 10px;
+      background-color: transparent;
       writing-mode: vertical-rl;
       text-align: center;
       overflow: hidden;
       word-break: break-word;
-      line-height: 1.2;
-      background-color: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      line-height: 1.1;
+      box-sizing: border-box;
     }
 
     #popup {
@@ -99,55 +71,57 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.5);
       justify-content: center;
       align-items: center;
-      z-index: 2000;
+      z-index: 1000;
     }
 
     #popup-content {
-      background-color: white;
-      padding: 10px;
+      background-image: url('https://iccarcgis.maps.arcgis.com/sharing/rest/content/items/ca04a206c9ca4bb481ffe35ee80fefb4/data');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 20px;
       border-radius: 10px;
-      max-width: 90%;
-      text-align: center;
+      max-width: 90vw;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 1.4;
     }
 
-    .popup-inner {
-      position: relative;
-      width: 80vw;
-      max-width: 300px;
-    }
-
-    .popup-inner img {
-      width: 100%;
-      display: block;
-    }
-
-    .popup-text {
-      position: absolute;
-      top: 16%;
+    #age-buttons {
+      position: fixed;
+      top: 10px;
       left: 50%;
       transform: translateX(-50%);
-      height: 72%;
-      padding: 4px;
-      font-size: 16px;
-      font-weight: bold;
-      color: black;
-      writing-mode: vertical-rl;
-      text-align: center;
-      word-break: break-word;
-      overflow: hidden;
-      background-color: transparent;
-      line-height: 1.3;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 10px;
+      border-radius: 10px;
+      z-index: 999;
+      gap: 5px;
+      width: 95vw;
+    }
+
+    #age-buttons button {
+      font-size: 12px;
+      padding: 6px 8px;
+      border: 1px solid #888;
+      border-radius: 5px;
+      background-color: #ffffff;
+      flex-grow: 1;
+    }
+
+    #age-buttons button:hover {
+      background-color: #d0eaff;
     }
   </style>
 </head>
 <body>
-
 <div id="age-buttons">
   <button onclick="filterByAge('10代以下')">10代以下</button>
   <button onclick="filterByAge('20代')">20代</button>
@@ -162,15 +136,14 @@
 
 <div id="tanzaku-container"></div>
 
-<div id="popup" onclick="popup.style.display='none'">
-  <div id="popup-content"></div>
+<div id="popup" onclick="popup.style.display = 'none';">
+  <div id="popup-content" onclick="event.stopPropagation();"></div>
 </div>
 
 <script>
 const container = document.getElementById("tanzaku-container");
 const popup = document.getElementById("popup");
 const popupContent = document.getElementById("popup-content");
-
 const imgURL = "https://iccarcgis.maps.arcgis.com/sharing/rest/content/items/63b21d4621df4c6eb4ffc05ecad72bd6/data";
 
 const confirmField = "確認";
@@ -183,7 +156,7 @@ function buildWhereClause() {
 
 function fetchAndDisplay() {
   const whereClause = buildWhereClause();
-  const url = `https://services5.arcgis.com/oISMFKlA90RsGqBJ/arcgis/rest/services/survey123_428ee531d6f64629ad1fb10db7e23778_results/FeatureServer/0/query?where=${encodeURIComponent(whereClause)}&outFields=field_1,field_2,${ageField},${confirmField}&orderByFields=objectid desc&resultRecordCount=16&f=json`;
+  const url = `https://services5.arcgis.com/oISMFKlA90RsGqBJ/arcgis/rest/services/survey123_428ee531d6f64629ad1fb10db7e23778_results/FeatureServer/0/query?where=${encodeURIComponent(whereClause)}&outFields=field_1,field_2,${ageField},${confirmField}&orderByFields=objectid desc&f=json`;
 
   fetch(url)
     .then(res => res.json())
@@ -200,33 +173,54 @@ function filterByAge(ageGroup) {
 
 function displayTanzaku(features) {
   container.innerHTML = "";
+  const spacingX = 120;
+  const spacingY = 250;
+  const columns = 3; // モバイル想定で少なめに
+
   features.forEach((feature, index) => {
     const attr = feature.attributes;
     const penname = attr["field_1"] || "";
     const wish = attr["field_2"] || "";
-
     const div = document.createElement("div");
     div.className = "tanzaku";
+
+    const col = index % columns;
+    const row = Math.floor(index / columns);
+    const x = 10 + col * spacingX;
+    const y = 160 + row * spacingY;
+
+    div.style.left = `${x}px`;
+    div.style.top = `${y}px`;
     div.style.animationDelay = `${Math.random() * 3}s`;
 
-    div.innerHTML = `
-      <img src="${imgURL}" alt="短冊">
-      <div class="text">${wish}<br>★${penname}</div>`;
+    div.innerHTML = `<img src="${imgURL}" alt="短冊">
+                     <div class="text">${wish}<br>★${penname}</div>`;
 
-    // ⬇ フォントサイズを自動縮小（6pxまで）
-    const textEl = div.querySelector(".text");
-    let fontSize = 11;
-    while (textEl.scrollHeight > textEl.clientHeight && fontSize > 6) {
-      fontSize -= 0.5;
-      textEl.style.fontSize = fontSize + "px";
-    }
-
-    // ⬇ ポップアップ表示処理
     div.onclick = () => {
       popupContent.innerHTML = `
-        <div class="popup-inner">
-          <img src="${imgURL}" alt="短冊">
-          <div class="popup-text">${wish}<br>★${penname}</div>
+        <div style="position: relative; width: 100%; max-width: 400px; margin: 0 auto;">
+          <img src="${imgURL}" alt="短冊" style="width: 100%;">
+          <div style="
+            position: absolute;
+            top: 15%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50%;
+            max-height: 70%;
+            padding: 5px;
+            color: black;
+            font-size: 20px;
+            font-weight: bold;
+            background-color: transparent;
+            writing-mode: vertical-rl;
+            text-align: center;
+            overflow: hidden;
+            word-break: break-word;
+            line-height: 1.1;
+            box-sizing: border-box;
+          ">
+            ${wish}<br><br>★${penname}
+          </div>
         </div>`;
       popup.style.display = "flex";
     };
@@ -237,7 +231,6 @@ function displayTanzaku(features) {
 
 fetchAndDisplay();
 </script>
-
 </body>
 </html>
 
