--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 
 <div id="tanzaku-container"></div>
 
-<div id="popup" onclick="popup.style.display = 'none';">
+<div id="popup" onclick="this.style.display = 'none';">
+
   <div id="popup-content" onclick="event.stopPropagation();"></div>
 </div>
 
