--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 /index.html
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -8,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #002244; /* 紺色背景 */
+      background-color: #002244;
       font-family: sans-serif;
       background-image: url('https://iccarcgis.maps.arcgis.com/sharing/rest/content/items/eb1fe275b5e84701b7f804c8d8a0704b/data');
       background-size: cover;
@@ -124,15 +125,37 @@
       top: 110px;
       left: 50%;
       transform: translateX(-50%);
-      background: #fff8c6; /* 薄い黄色 */
+      background: #fff8c6;
       color: #333;
       padding: 8px 16px;
       border-radius: 12px;
       font-size: 16px;
       font-weight: bold;
-      border: 2px solid #ffd700; /* 金色の枠線 */
+      border: 2px solid #ffd700;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       z-index: 998;
+    }
+
+    /* 流れ星スタイル */
+    .shooting-star {
+      position: fixed;
+      top: -50px;
+      font-size: 30px;
+      color: gold;
+      z-index: 2000;
+      animation: starFall 3s ease-out forwards;
+      pointer-events: none;
+    }
+
+    @keyframes starFall {
+      0% {
+        top: -50px;
+        opacity: 1;
+      }
+      100% {
+        top: 100%;
+        opacity: 0;
+      }
     }
   </style>
 </head>
@@ -150,14 +173,13 @@
   <button onclick="filterByAge()">全て表示</button>
 </div>
 
-<!-- 投稿総数表示 -->
 <div id="count-display">投稿総数：0 件</div>
 
 <div id="tanzaku-container"></div>
 
 <div id="popup" onclick="this.style.display = 'none';">
-  <div id="popup-content">
-    <!-- popup inner content inserted dynamically -->
+  <div id="popup-content" onclick="event.stopPropagation();">
+    <!-- inner content inserted dynamically -->
   </div>
 </div>
 
@@ -193,6 +215,15 @@ function filterByAge(ageGroup) {
   fetchAndDisplay();
 }
 
+function createShootingStar() {
+  const star = document.createElement("div");
+  star.className = "shooting-star";
+  star.textContent = "★";
+  star.style.left = `${Math.random() * 80 + 10}vw`;
+  document.body.appendChild(star);
+  setTimeout(() => star.remove(), 3000);
+}
+
 function displayTanzaku(features) {
   container.innerHTML = "";
   countDisplay.textContent = `投稿総数：${features.length} 件`;
@@ -221,6 +252,11 @@ function displayTanzaku(features) {
                      <div class="text">${wish}<br>★${penname}</div>`;
 
     div.onclick = () => {
+      // ★ 流れ星5つ連続
+      for (let i = 0; i < 5; i++) {
+        setTimeout(createShootingStar, i * 400);
+      }
+
       popupContent.innerHTML = `
         <div style="position: relative; width: 100%; max-width: 400px; margin: 0 auto;">
           <img src="${imgURL}" alt="短冊" style="width: 100%;">
@@ -257,6 +293,7 @@ fetchAndDisplay();
 </script>
 </body>
 </html>
+
 
 
 
