--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <div id="tanzaku-container"></div>
 
 <div id="popup" onclick="this.style.display = 'none';">
-  <div id="popup-content" onclick="event.stopPropagation();">
+ <div id="popup-content">
     <!-- inner content inserted dynamically -->
   </div>
 </div>
