--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <button onclick="filterByAge()">全て表示</button>
 </div>
 
-<div id="count-display">投稿総数：0 件</div>
+<div id="count-display">願いの数：0 枚</div>
 
 <div id="tanzaku-container"></div>
 
