--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function createShootingStar() {
 
 function displayTanzaku(features) {
   container.innerHTML = "";
-  countDisplay.textContent = `投稿総数：${features.length} 件`;
+  countDisplay.textContent = `願いの数：${features.length} 枚`;
 
   const spacingX = 120;
   const spacingY = 250;
