--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@ function displayTanzaku(features) {
             word-break: break-word;
             line-height: 2.0;
             box-sizing: border-box;
+            font-family: "Noto Sans JP", "Yu Gothic", sans-serif;
+
           ">
             ${wish}<br><br>★${penname}
           </div>
