--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
     }
 #warning-message {
   position: absolute;
-  top: 150px; /* count-displayがtop: 110pxなので少し下に配置 */
+  top: 160px; /* count-displayがtop: 110pxなので少し下に配置 */
   left: 50%;
   transform: translateX(-50%);
   color: yellow;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  //background-color: rgba(0, 0, 0, 0.5);
   padding: 6px 10px;
   border-radius: 8px;
   z-index: 998;
